WIP on deck sheet

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -142,7 +142,7 @@ a:hover {
   font-size: 12pt !important;;
 }
 .item-alternating{
-  @apply ml-2;
+  @apply ml-1;
 }
 .item-entry
 {
@@ -158,6 +158,25 @@ a:hover {
   max-width:80px;
   @apply px-2;
 }
+
+.field-short {
+  flex-basis: 45px;
+  flex-grow: 0;
+  @apply px-2;
+}
+
+.field-short {
+  flex-basis: 80px;
+  flex-grow: 0;
+  @apply px-2;
+}
+
+.field-long {
+  flex-basis: 160px;
+  flex-grow: 0;
+  @apply px-2;
+}
+
 
 div.editor .editor-content{
   min-height: 100px;
