--- a/src/templates/items/program-sheet.html
+++ b/src/templates/items/program-sheet.html
@@ -104,7 +104,7 @@
             class="w-32 px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
             name="data.target"
             min="0"
-            value="{{data.data.targetAllowed}}"
+            value="{{data.data.target}}"
           />
     </div>
     {{/if}}
