--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -160,12 +160,12 @@ a:hover {
 }
 
 .field-short {
-  flex-basis: 45px;
+  flex-basis: 60px;
   flex-grow: 0;
   @apply px-2;
 }
 
-.field-short {
+.field-medium {
   flex-basis: 80px;
   flex-grow: 0;
   @apply px-2;
