--- a/src/templates/items/cyberware-sheet.html
+++ b/src/templates/items/cyberware-sheet.html
@@ -71,7 +71,7 @@
         <option value="Head">{{localize 'swnr.sheet.cyberware.types.head'}}</option>
         <option value="Body">{{localize 'swnr.sheet.cyberware.types.body'}}</option>
         <option value="Limb">{{localize 'swnr.sheet.cyberware.types.limb'}}</option>
-        <option value="Nerve">{{localize 'swnr.sheet.cyberware.types.nevre'}}</option>
+        <option value="Nerve">{{localize 'swnr.sheet.cyberware.types.nerve'}}</option>
         <option value="Sensory">{{localize 'swnr.sheet.cyberware.types.sensory'}}</option>
         {{/select}}
       </select>
