--- a/src/templates/actors/fragments/program-list.html
+++ b/src/templates/actors/fragments/program-list.html
@@ -10,6 +10,11 @@
          {{localize 'swnr.sheet.program.targetAllowedShort'}}
       {{/if}}
     </div>
+    {{#if (eq subtype "verb")}}
+    <div class="field-short">
+      {{localize 'swnr.sheet.program.accessCostShort'}}
+    </div>
+    {{/if}}
     <div class="item-status text-right field-short">      
       <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
         title="{{localize 'swnr.sheet.add-item'}}" 
@@ -36,7 +41,7 @@
             <a></a>
           </span>
           <a>{{item.name}}</a>
-          {{#unless (eq subtype "subject")}}
+          {{#unless (eq ../subtype "subject")}}
               {{#if item.data.data.useAffects}}
               [{{item.data.data.useAffects}}]
               {{/if}}
@@ -45,11 +50,20 @@
         <div class="field-long">
           {{ item.data.data.target }}
         </div>
+        {{#if (eq ../subtype "verb")}}
+        <div class="field-short">
+          {{item.data.data.accessCost}}
+        </div>
+        {{/if}}
         <div class="item-controls text-right field-short">
-          <a class="item-control item-edit text-gray-400 hover:text-purple-800 transition-colors" 
+          <a class="item-control item-edit  hover:text-purple-800 transition-colors
+          text-gray-200
+          " 
             title='{{localize 'swnr.sheet.edit-item'}}'><i class="fas fa-edit"></i></a>
           
-          <a class="item-control item-delete text-gray-400 hover:text-red-600 transition-colors" 
+          <a class="item-control item-delete  hover:text-red-600 transition-colors
+          text-gray-200
+          " 
             title='{{localize 'swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
 
 
