stat field/edge

--- a/src/templates/items/edge-sheet.html
+++ b/src/templates/items/edge-sheet.html
@@ -2,7 +2,7 @@
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
   <div class="flex flexrow gap-2 text-center">
     <div class="flex flex-col items-center">
-        <pre>{{stringify item}}</pre>
+        {{!-- <pre>{{stringify item}}</pre> --}}
     </div>
   </div>
 </form>
