--- a/src/templates/actors/fragments/char/tab-power.html
+++ b/src/templates/actors/fragments/char/tab-power.html
@@ -5,16 +5,17 @@
         <div><!-- table-->
             <li class="item-titles flexrow">
               <!--<div class="item-caret"><!--<i class="fas fa-caret-down"></i></div>-->
-              <div class="item-name pr-2.0">{{localize 'swnr.sheet.cyberware.name'}} </div>
-              <div class="item-strain text-center">{{localize 'swnr.sheet.cyberware.strain'}} </div>
+              <div class="item-name pr-2.0 pl-2">{{localize 'swnr.sheet.cyberware.name'}} </div>
+              <div class="item-strain text-center field-short">{{localize 'swnr.sheet.cyberware.strain'}} </div>
+              <div class="field-short">{{localize 'swnr.sheet.cyberware.concealmentShort'}}</div>
               
               <div class="item-effect pr-2.0">{{localize 'swnr.sheet.description'}}</div>
-              <div class="item-controls flex-shrink text-right">
+              <div class="item-controls flex-shrink field-short text-right">
                 <a class="item-control item-search text-gray-100 hover:text-green-400 transition-colors"
                   title="{{localize 'swnr.sheet.search-item'}}" data-item-type="cyberware"  data-item-name="Cyberware">
                   <i class="fas fa-search"></i>
                 </a> 
-                <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
+                <a class="item-control item-create  text-gray-100 hover:text-green-400 transition-colors"
                   title="{{localize 'swnr.sheet.add-item'}}" data-item-type="cyberware" data-item-name="Cyberware">
                   <i class="fas fa-plus"></i>
                 </a> 
@@ -26,15 +27,21 @@
                 <div class="item flexrow py-3.0" data-item-id="{{item.id}}">
                   <div class="item-image" style="background-image: url({{item.img}})"><a></a></div>
                   <div class="item-name item-click item-rollable flexrow pr-2.0">                
-                    <a>{{item.name}}</a>
+                    <a>{{item.name}}
+                    {{#if item.data.data.complication}}
+                      *
+                    {{/if}}</a>
                   </div>
-                  <div class="item  text-center">
+                  <div class="item field-short text-center">
                     {{item.data.data.strain}}
+                  </div>
+                  <div class="field-short">
+                    {{item.data.data.concealment}}
                   </div>
                   <div class="item pr-2.0">
                     {{item.data.data.effect}}
                   </div>
-                  <div class="item-controls text-right flex-shrink">
+                  <div class="item-controls text-right flex-shrink field-short">
                     <a class="item-control item-edit text-gray-400 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                       <i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete text-gray-400 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'><i
