--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -111,6 +111,11 @@ input, select, textarea {
   @apply rounded-none placeholder-gray-500 focus:shadow-none;
 }
 
+input[type="search"] {
+  color: black;
+}
+
+
 .window-content input, select, textarea {
   @apply border-gray-800  mx-auto rounded-md bg-gray-400 pl-1.5 placeholder-gray-500;
 }
