WIP on armor/shield fixes

--- a/src/templates/items/armor-sheet.html
+++ b/src/templates/items/armor-sheet.html
@@ -103,22 +103,64 @@
         </select>
       </div>
       <div class="flex flexcol">
-        <label class="flex gap-1">
+        <label class="">
           <input type="checkbox" name="data.shield" {{checked data.data.shield}} />
           {{localize 'swnr.armor.shield'}}
         </label>
         {{#if data.data.settings.useCWNArmor}}
-        <label class="flex gap-1">
+        <label class="">
           <input type="checkbox" name="data.subtle" {{checked data.data.subtle}} />
           {{localize 'swnr.armor.subtle'}}
         </label>
-        <label class="flex gap-1">
+        <label class="">
           <input type="checkbox" name="data.heavy" {{checked data.data.heavy}} />
           {{localize 'swnr.armor.heavy'}}
         </label>
         {{/if}}
-            {{#if data.data.settings.useCWNArmor}}
-            {{/if}}
+
       </div>
+      <div class="flex flexcol">
+        {{#if data.data.shield}}
+          <div class="items-center">
+            <div>
+              {{#if data.data.settings.useCWNArmor}}
+                {{localize 'swnr.armor.ranged'}}
+              {{/if}}          
+              {{localize 'swnr.armor.shieldAC'}}:
+            </div>
+
+            <input
+              type="number"
+              class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+              step="1"
+              name="data.shieldACBonus"
+              min="0"
+              data-dtype="Number"
+              value="{{data.data.shieldACBonus}}"
+            />
+          </div>
+
+          {{#if data.data.settings.useCWNArmor}}
+            <div class="items-center">
+              <div>
+                {{localize 'swnr.armor.melee'}}
+                {{localize 'swnr.armor.shieldAC'}}:
+              </div>
+
+              <input
+                type="number"
+                class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+                step="1"
+                name="data.shieldMeleeACBonus"
+                min="0"
+                data-dtype="Number"
+                value="{{data.data.shieldMeleeACBonus}}"
+              />
+            </div>
+
+          {{/if}}
+        {{/if}}
+      </div>
+              
   </div>
 </form>
