--- a/src/templates/items/armor-sheet.html
+++ b/src/templates/items/armor-sheet.html
@@ -86,7 +86,7 @@
         />
       </div> --}}
 
-      <div>
+      <div class="flex flexcol">
         <div>{{localize 'swnr.armor.type.label'}}:</div>
         <select
           name="data.type"
@@ -101,6 +101,21 @@
           <option value="powered">{{localize 'swnr.armor.type.powered'}}</option>
           {{/select}}
         </select>
+        {{#if data.data.settings.useTrauma}}
+          <div>
+            {{localize 'swnr.armor.traumaMod'}}:
+            <input
+              type="number"
+              class="px-1 w-10 text-center border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md"
+              step="1"
+              name="data.traumaDiePenalty"
+              min="0"
+              data-dtype="Number"
+              value="{{data.data.traumaDiePenalty}}"
+            />
+          </div>
+        {{/if}}
+
       </div>
       <div class="flex flexcol">
         <label class="">
