--- a/src/templates/items/armor-sheet.html
+++ b/src/templates/items/armor-sheet.html
@@ -124,11 +124,11 @@
         </label>
         {{#if data.data.settings.useCWNArmor}}
         <label class="">
-          <input type="checkbox" name="data.subtle" {{checked data.data.subtle}} />
+          <input type="checkbox" name="data.isSubtle" {{checked data.data.isSubtle}} />
           {{localize 'swnr.armor.subtle'}}
         </label>
         <label class="">
-          <input type="checkbox" name="data.heavy" {{checked data.data.heavy}} />
+          <input type="checkbox" name="data.isHeavy" {{checked data.data.isHeavy}} />
           {{localize 'swnr.armor.heavy'}}
         </label>
         {{/if}}
