--- a/src/templates/actors/fragments/char/tab-stats.html
+++ b/src/templates/actors/fragments/char/tab-stats.html
@@ -112,7 +112,7 @@
       </div>
 
 
-      <div class="armor flex flexrow items-center">
+      <div class="tt flex flexrow items-center">
           <span><label>{{localize 'swnr.sheet.traumaTarget'}}</label>:</span>
         <input
           type="number"
