--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -168,7 +168,27 @@
                 </label>
               </div>
             </div>
+
+
             <!--end flex for speed-->
+            <div class="flex">
+
+              {{#if (useTrauma)}}
+                <!--TT-->
+                <div class="TT flex flex-col justify-center items-center">
+                  <input
+                    type="number"
+                    class="w-8 text-center px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+                    min="1"
+                    step="1"
+                    name="data.traumaTarget"
+                    value="{{actor.data.data.traumaTarget}}"
+                    data-dtype="Number"
+                  />
+                  <label title="{{localize 'swnr.sheet.traumaTarget'}}">TT</label>
+                </div> 
+              {{/if}}
+            </div>
           </div> <!-- end flex row for crew&speed-->
         </div>
         <!--end box 2 colspan for crew & speed-->
