button color and access for NPC on cyberdeck

--- a/src/templates/actors/cyberdeck-sheet.html
+++ b/src/templates/actors/cyberdeck-sheet.html
@@ -288,7 +288,7 @@
                 >
                   <div
                     class="bg-yellow-400 h-full rounded-full"
-                    style="width: min(calc(100% * {{hacker.data.data.access.value}}/{{hacker.data.data.access.max}}));"
+                    style="width: min(calc(100% * {{access.value}}/{{access.max}}));"
                   ></div>
                 </div>
               </div>
