roll hit dice if HP max < 0

--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -101,7 +101,8 @@
         />
       </div>
       <div title="The number of hit dice to roll. If the die button is never clicked
-or the HP field is never set, this roll for each token created.
+or the HP field is never set, this roll for each token created. Set max hp to -1
+to roll on create/undo.
 
 A number like '3' will roll 3d8 (no quotes in the field). 
 Can also be '3d' or '3d8' to get the same roll.
